--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -24,4 +24,15 @@
     <version>3.1.5.rc17-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
