--- a/ids-code-generator/pom.xml
+++ b/ids-code-generator/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>0.10.1-Carbon-SR1.3_1_5_rc17-frinxodl-SNAPSHOT</version>
+        <version>0.12.2</version>
         <relativePath/>
     </parent>
 
@@ -30,14 +30,14 @@
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-artifacts</artifactId>
-                <version>2.2.1-Carbon-SR1.3_1_5_rc17-frinxodl-SNAPSHOT</version>
+                <version>2.4.2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yangtools-artifacts</artifactId>
-                <version>1.1.1-Carbon-SR1.3_1_5_rc17-frinxodl-SNAPSHOT</version>
+                <version>2.0.5</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
