--- a/uniconfig-model/pom.xml
+++ b/uniconfig-model/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>0.10.1-Carbon-SR1.3_1_5_rc17-frinxodl-SNAPSHOT</version>
+    <version>0.12.2</version>
     <relativePath/>
   </parent>
 
@@ -22,18 +22,6 @@
   <artifactId>uniconfig-model</artifactId>
   <version>3.1.5.rc17-frinx-SNAPSHOT</version>
   <packaging>bundle</packaging>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.opendaylight.controller</groupId>
-        <artifactId>mdsal-artifacts</artifactId>
-        <version>1.5.1-Carbon-SR1.3_1_5_rc17-frinxodl-SNAPSHOT</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
