Unify internal versions to 4.1.0
Change-Id: If17a52d9975d3e5a0b55e421253b6fd45c6d236b
Signed-off-by: Dana Kutenicsova <dkutenicsova@frinx.io>

--- a/features/openconfig-features/pom.xml
+++ b/features/openconfig-features/pom.xml
@@ -18,7 +18,7 @@
 
   <groupId>io.frinx.openconfig</groupId>
   <artifactId>openconfig-features</artifactId>
-  <version>3.1.5.rc17-frinx-SNAPSHOT</version>
+  <version>4.1.0</version>
   <name>${project.artifactId}</name>
 
   <dependencyManagement>
