--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-artifacts</artifactId>
-    <version>3.1.5.rc17-frinx-SNAPSHOT</version>
+    <version>4.1.0</version>
     <packaging>pom</packaging>
 
     <dependencyManagement>
