--- a/configuration-metadata/pom.xml
+++ b/configuration-metadata/pom.xml
@@ -16,12 +16,12 @@
     <parent>
         <groupId>io.frinx.openconfig</groupId>
         <artifactId>openconfig-parent</artifactId>
-        <version>3.1.5.rc17-frinx-SNAPSHOT</version>
+        <version>4.1.0</version>
         <relativePath>../openconfig-parent</relativePath>
     </parent>
 
     <artifactId>openconfig-configuration-metadata</artifactId>
-    <version>3.1.5.rc17-frinx-SNAPSHOT</version>
+    <version>4.1.0</version>
     <packaging>bundle</packaging>
 
     <dependencies>
