--- a/features/frinx-openconfig-configuration-metadata/pom.xml
+++ b/features/frinx-openconfig-configuration-metadata/pom.xml
@@ -22,7 +22,7 @@
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>frinx-openconfig-configuration-metadata</artifactId>
     <packaging>feature</packaging>
-    <version>3.1.5.rc17-frinx-SNAPSHOT</version>
+    <version>4.1.0</version>
     <name>Frinx :: Openconfig :: Configuration Metadata</name>
 
     <dependencyManagement>
