--- a/features/frinx-openconfig-models/pom.xml
+++ b/features/frinx-openconfig-models/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>frinx-openconfig-models</artifactId>
-    <version>3.1.5.rc17-frinx-SNAPSHOT</version>
+    <version>4.1.0</version>
     <packaging>feature</packaging>
     <name>Frinx :: Openconfig :: Models</name>
 
