--- a/features/frinx-uniconfig-model/pom.xml
+++ b/features/frinx-uniconfig-model/pom.xml
@@ -22,7 +22,7 @@
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>frinx-uniconfig-model</artifactId>
     <packaging>feature</packaging>
-    <version>3.1.5.rc17-frinx-SNAPSHOT</version>
+    <version>4.1.0</version>
     <name>Frinx :: Uniconfig :: Model</name>
 
     <properties>
