--- a/features/pom.xml
+++ b/features/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>features-aggregator</artifactId>
-    <version>3.1.5.rc17-frinx-SNAPSHOT</version>
+    <version>4.1.0</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
 
