Added forgotten opeconfig-models dependency
Change-Id: I9029c2e44ee66e10a1e81ecdbb06207e70ddde54
Signed-off-by: Dana Kutenicsova <dkutenicsova@frinx.io>

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -163,6 +163,13 @@
             <!-- Features -->
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>frinx-openconfig-models</artifactId>
+                <type>xml</type>
+                <classifier>features</classifier>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>frinx-openconfig-extensions</artifactId>
                 <type>xml</type>
                 <classifier>features</classifier>
