Add frinx version suffix

--- a/features/frinx-openconfig-cdp/pom.xml
+++ b/features/frinx-openconfig-cdp/pom.xml
@@ -6,23 +6,20 @@
   ~ terms of the Eclipse Public License v1.0 which accompanies this distribution,
   ~ and is available at http://www.eclipse.org/legal/epl-v10.html
   -->
-
 <!-- vi: set et smarttab sw=4 tabstop=4: -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.1-Oxygen-SR2.4_1_0_rc1-frinxodl-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>frinx-openconfig-cdp</artifactId>
     <packaging>feature</packaging>
-    <version>4.1.0</version>
+    <version>4.1.0.rc1-frinx-SNAPSHOT</version>
     <name>Frinx :: Openconfig :: CDP</name>
 
     <dependencyManagement>
@@ -37,7 +34,7 @@
             <dependency>
                 <groupId>org.opendaylight.mdsal.model</groupId>
                 <artifactId>odl-mdsal-models</artifactId>
-                <version>0.12.2</version>
+                <version>0.12.2-Oxygen-SR2.4_1_0_rc1-frinxodl-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
