--- a/openconfig-parent/pom.xml
+++ b/openconfig-parent/pom.xml
@@ -6,16 +6,13 @@
   ~ terms of the Eclipse Public License v1.0 which accompanies this distribution,
   ~ and is available at http://www.eclipse.org/legal/epl-v10.html
   -->
-
 <!-- vi: set et smarttab sw=4 tabstop=4: -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>0.12.2</version>
+        <version>0.12.2-Oxygen-SR2.4_1_0_rc1-frinxodl-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
@@ -25,7 +22,7 @@
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-parent</artifactId>
-    <version>4.1.0</version>
+    <version>4.1.0.rc1-frinx-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
@@ -70,7 +67,7 @@
                                 <dependency>
                                     <groupId>io.frinx.openconfig</groupId>
                                     <artifactId>ids-code-generator</artifactId>
-                                    <version>4.1.0</version>
+                                    <version>4.1.0.rc1-frinx-SNAPSHOT</version>
                                     <scope>compile</scope>
                                 </dependency>
                             </dependencies>
