--- a/features/openconfig-features/pom.xml
+++ b/features/openconfig-features/pom.xml
@@ -20,149 +20,160 @@
   <artifactId>openconfig-features</artifactId>
   <version>4.1.0.rc1-frinx-SNAPSHOT</version>
   <name>${project.artifactId}</name>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>io.frinx.openconfig</groupId>
-        <artifactId>openconfig-artifacts</artifactId>
-        <type>pom</type>
-        <version>${project.version}</version>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+  <packaging>feature</packaging>
 
   <dependencies>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-types</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-interfaces</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-vlan</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-if-ip</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-policy</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-bgp</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-mpls</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-network-instance</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-ospf</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-platform</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-lldp</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-cdp</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-acl</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-lacp</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-policy-forwarding</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-snmp</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-logging</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-bfd</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-netflow</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-qos</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-configuration-metadata</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-uniconfig-model</artifactId>
+      <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
