Added YANG of HSRP.
Change-Id: I326a522244c4c829bef9e7fe4d50957726fb8eb9
Signed-off-by: hiroyuki.okudaira <hiroyuki.okudaira@g.softbank.co.jp>

--- a/features/openconfig-features/pom.xml
+++ b/features/openconfig-features/pom.xml
@@ -177,5 +177,12 @@
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>frinx-openconfig-hsrp</artifactId>
+      <version>${project.version}</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
   </dependencies>
 </project>
