FRHD-278 Added OSPFv3 protocol
Change-Id: I97485c7b9ab5d7ebbd946cbaaafaa06b10ebe876
Signed-off-by: tatsuso.cho <tatsuso.cho@g.softbank.co.jp>
Signed-off-by: Jakub Morvay <jmorvay@frinx.io>

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     <module>logging</module>
     <module>configuration-metadata</module>
     <module>qos</module>
+    <module>ospfv3</module>
 
     <module>features</module>
   </modules>
