--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -94,6 +94,11 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-ospfv3</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-platform</artifactId>
                 <version>${project.version}</version>
             </dependency>
