Added EVPN configuration.
Change-Id: Ib9531d0682b3dba8ed0b68ecdbc78e5c61152a49
Signed-off-by: tatsuso.cho <tatsuso.cho@g.softbank.co.jp>

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
     <module>configuration-metadata</module>
     <module>qos</module>
     <module>ospfv3</module>
+    <module>evpn</module>
     <module>hsrp</module>
 
     <module>features</module>
