--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -154,6 +154,11 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-evpn</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-configuration-metadata</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -342,6 +347,13 @@
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
                 <artifactId>frinx-uniconfig-model</artifactId>
+                <type>xml</type>
+                <classifier>features</classifier>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
+                <artifactId>frinx-openconfig-evpn</artifactId>
                 <type>xml</type>
                 <classifier>features</classifier>
                 <version>${project.version}</version>
