--- a/features/pom.xml
+++ b/features/pom.xml
@@ -49,5 +49,6 @@
         <module>frinx-openconfig-vlan</module>
         <module>frinx-openconfig-if-ip</module>
         <module>frinx-openconfig-hsrp</module>
+        <module>frinx-openconfig-evpn</module>
     </modules>
 </project>
