Add probe and test definitions from openconfig
Add extentions for junos regarding probe and test definitions.
Add extentions for junos specific parameter in subinterfaces.
Add 'Url' type in frinx-openconfig-inet-types.

Change-Id: I22e7d5debbd7f74a69223ae6efa595f34510c2d6
Signed-off-by: takashi.matsubara02 <takashi.matsubara02@g.softbank.co.jp>

--- a/features/openconfig-features/pom.xml
+++ b/features/openconfig-features/pom.xml
@@ -184,5 +184,12 @@
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>frinx-openconfig-probe</artifactId>
+      <version>${project.version}</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
   </dependencies>
 </project>
