--- a/features/pom.xml
+++ b/features/pom.xml
@@ -50,5 +50,6 @@
         <module>frinx-openconfig-if-ip</module>
         <module>frinx-openconfig-hsrp</module>
         <module>frinx-openconfig-evpn</module>
+        <module>frinx-openconfig-probe</module>
     </modules>
 </project>
