Prepared for implementation of junos-18-probe-unit
Fixed frinx-openconfig-probes feature definition.
Added augment statement for uniconfig to yang files
In Junos 18 test-type is not mandatory

Change-Id: Ia66b759e66fe452e21afbf0c6ecdda6aeb6dd65f
Signed-off-by: isamu.kawaguchi <isamu.kawaguchi04@g.softbank.co.jp>

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -129,6 +129,11 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-probes</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-snmp</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -298,6 +303,13 @@
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
                 <artifactId>frinx-openconfig-policy-forwarding</artifactId>
+                <type>xml</type>
+                <classifier>features</classifier>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
+                <artifactId>frinx-openconfig-probes</artifactId>
                 <type>xml</type>
                 <classifier>features</classifier>
                 <version>${project.version}</version>
