--- a/features/frinx-openconfig-probes/pom.xml
+++ b/features/frinx-openconfig-probes/pom.xml
@@ -17,7 +17,7 @@
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
-    <artifactId>frinx-openconfig-probe</artifactId>
+    <artifactId>frinx-openconfig-probes</artifactId>
     <packaging>feature</packaging>
     <version>4.2.0.rc10-frinx-SNAPSHOT</version>
     <name>Frinx :: Openconfig :: Probe</name>
@@ -44,7 +44,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>openconfig-policy</artifactId>
+            <artifactId>openconfig-probes</artifactId>
         </dependency>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
