Fixed typo in openconfig-features
Change-Id: I73505e8a232f43519b1fafe5192bc947ec583347
Signed-off-by: Martin Sunal <msunal@frinx.io>

--- a/features/openconfig-features/pom.xml
+++ b/features/openconfig-features/pom.xml
@@ -186,7 +186,7 @@
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
-      <artifactId>frinx-openconfig-probe</artifactId>
+      <artifactId>frinx-openconfig-probes</artifactId>
       <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
