--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -39,6 +39,16 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-hsrp</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-probes</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-types</artifactId>
                 <version>${project.version}</version>
             </dependency>
