FI-779: Simplified creation of instances using IIDs and keys
Signed-off-by: Adam Chmara <achmara@frinx.io>
Change-Id: I9ac116953f601df9a6ac428261627f2c0702d335

--- a/features/frinx-openconfig-models/pom.xml
+++ b/features/frinx-openconfig-models/pom.xml
@@ -167,5 +167,9 @@
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
+        <dependency>
+            <groupId>io.frinx.openconfig</groupId>
+            <artifactId>openconfig-utils</artifactId>
+        </dependency>
     </dependencies>
 </project>
