Added IS-IS model derived from public openconfig.
Change-Id: I774c95fdb50ba64236c0183caa1df18d751db2dc
Signed-off-by: isamu.kawaguchi <isamu.kawaguchi04@g.softbank.co.jp>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -51,5 +51,6 @@
         <module>frinx-openconfig-hsrp</module>
         <module>frinx-openconfig-evpn</module>
         <module>frinx-openconfig-probes</module>
+        <module>frinx-openconfig-isis</module>
     </modules>
 </project>
