--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -179,6 +179,11 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-isis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-utils</artifactId>
                 <version>${project.version}</version>
             </dependency>
