--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <module>hsrp</module>
     <module>probes</module>
     <module>utils</module>
+    <module>isis</module>
 
     <module>features</module>
   </modules>
