Added Ethernet OAM model.
Change-Id: I37c67aa23778f01b73e994fd60c1c95ceab6d196
Signed-off-by: isamu.kawaguchi <isamu.kawaguchi04@g.softbank.co.jp>

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -139,11 +139,6 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
-                <artifactId>openconfig-probes</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-snmp</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -185,6 +180,11 @@
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-utils</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-oam</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
