Brocade - add STP yang model
Signed-off-by: Filip Glemba <fglemba@frinx.io>
Change-Id: I7b1f889bd61514b9a8100f6efc343530e798576e

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -52,6 +52,7 @@
         <module>frinx-openconfig-evpn</module>
         <module>frinx-openconfig-probes</module>
         <module>frinx-openconfig-isis</module>
+        <module>frinx-openconfig-stp</module>
         <module>frinx-openconfig-oam</module>
     </modules>
 </project>
