--- a/features/frinx-openconfig-models/pom.xml
+++ b/features/frinx-openconfig-models/pom.xml
@@ -133,6 +133,12 @@
         </dependency>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
+            <artifactId>frinx-openconfig-stp</artifactId>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
+        <dependency>
+            <groupId>io.frinx.openconfig</groupId>
             <artifactId>frinx-openconfig-logging</artifactId>
             <type>xml</type>
             <classifier>features</classifier>
