Added ipsec model.
Change-Id: I2a3261b58741e84926d5359b4b1842b83d5fc09a
Signed-off-by: isamu.kawaguchi <isamu.kawaguchi04@g.softbank.co.jp>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -54,5 +54,6 @@
         <module>frinx-openconfig-isis</module>
         <module>frinx-openconfig-stp</module>
         <module>frinx-openconfig-oam</module>
+        <module>frinx-openconfig-ipsec</module>
     </modules>
 </project>
