--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -26,14 +26,6 @@
         <dependencies>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
-                <artifactId>openconfig-features</artifactId>
-                <classifier>features</classifier>
-                <version>${project.version}</version>
-                <type>xml</type>
-            </dependency>
-
-            <dependency>
-                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-extensions</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -194,11 +186,23 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-ipsec</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>uniconfig-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <!-- Features -->
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-features</artifactId>
+                <classifier>features</classifier>
+                <version>${project.version}</version>
+                <type>xml</type>
+            </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
                 <artifactId>frinx-openconfig-models</artifactId>
