VFZ-4 : broadcast-containment yang model
new top module

Signed-off-by: Matej Glemba <mglemba@frinx.io>
Change-Id: I57034cfa7979bdce887aa38b2e1ffd612bbb68d1

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -55,5 +55,6 @@
         <module>frinx-openconfig-stp</module>
         <module>frinx-openconfig-oam</module>
         <module>frinx-openconfig-ipsec</module>
+        <module>frinx-openconfig-broadcast-containment</module>
     </modules>
 </project>
