--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -146,6 +146,11 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-broadcast-containment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>openconfig-netflow</artifactId>
                 <version>${project.version}</version>
             </dependency>
