--- a/features/openconfig-features/pom.xml
+++ b/features/openconfig-features/pom.xml
@@ -151,6 +151,13 @@
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
+      <artifactId>frinx-openconfig-broadcast-containment</artifactId>
+      <version>${project.version}</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
       <artifactId>frinx-openconfig-netflow</artifactId>
       <version>${project.version}</version>
       <type>xml</type>
