UNI-856 Added l2-cft yang model
Signed-off-by: Marek Pastorek <mpastorek@frinx.io>
Change-Id: Id9847748284273cfe31e46173d7b619d0c39575d

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -56,5 +56,6 @@
         <module>frinx-openconfig-oam</module>
         <module>frinx-openconfig-ipsec</module>
         <module>frinx-openconfig-broadcast-containment</module>
+        <module>frinx-openconfig-l2-cft</module>
     </modules>
 </project>
