--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -196,6 +196,11 @@
             </dependency>
             <dependency>
                 <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-l2-cft</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
                 <artifactId>uniconfig-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
