UNI-905 Created frinx-openconfig-ring.yang
Created frinx-openconfig-ring.yang
Edited frinx-saos-virtual-ring-extension.yang

Signed-off-by: Marek Pastorek <mpastorek@frinx.io>
Change-Id: I9dcec0e352224acceb62343dca1b04da815f80a6

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -57,5 +57,6 @@
         <module>frinx-openconfig-ipsec</module>
         <module>frinx-openconfig-broadcast-containment</module>
         <module>frinx-openconfig-l2-cft</module>
+        <module>frinx-openconfig-ring</module>
     </modules>
 </project>
