--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     <module>ipsec</module>
     <module>broadcast-containment</module>
     <module>l2-cft</module>
+    <module>ring</module>
     <module>features</module>
   </modules>
 
